--- a/PeopleBlazorApplication/Pages/UpdateUser.razor
+++ b/PeopleBlazorApplication/Pages/UpdateUser.razor
@@ -8,7 +8,7 @@
         <DataAnnotationsValidator />
         <ValidationSummary />
 
-        <!-- Table with Heading -->
+        <!-- Table start -->
         <table class="table table-borderless">
             <thead>
                 <tr>
@@ -34,9 +34,9 @@
                 </tr>
             </tbody>
         </table>
-
+        <!-- Table end -->
         <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-success me-2 w-auto">Add</button>
+            <button type="submit" class="btn btn-warning me-2 w-auto">Update</button>
             <button type="button" class="btn btn-secondary ms-2 w-auto" @onclick="ResetForm">Reset</button>
         </div>
     </EditForm>
